fix : fix loop in spacing utility

--- a/src/styles/utilities/_spacing.scss
+++ b/src/styles/utilities/_spacing.scss
@@ -1,7 +1,7 @@
 
 // PADDING AND MARGIN
 
-$spaceamounts: (1, 2, 3, 4, 5, 6, 7, 8);
+$spaceamounts: (0, 1, 2, 3, 4, 5, 6, 7, 8);
 @each $space in $spaceamounts {
   .u-m-#{$space} {
     margin: #{$space}rem;
